# PharmacistAssistantAI

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_grader.py  train.py  validate-submission.sh
.github/workflows/: sync_to_hf.yml
agent/: llm_agent.py  rl_agent.py
core/: __init__.py  drug_search.py  prescription_parser.py
data/: build_db.py
env/: __init__.py  environment.py  graders.py  interactions.py  models.py  noise.py  tasks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  TrainingChart.jsx  api.js  index.css
graders/: __init__.py  graders.py
rl_weights/: q_table.json
server/: app.py
